--- a/aomi.html
+++ b/aomi.html
@@ -99,6 +99,18 @@ var g = {
         "nucl": function() {
             // select N seeds at random
             // per tick, keep track of growth frontier
+
+            // new loop
+            g.tick = 0;
+            g.id = window.setInterval(g.frame, 1000);
+        },
+        "frame": function() {
+            console.log("tick count: " + g.tick);
+            if (g.tick >= 16) {
+                console.log("anim done");
+                window.clearInterval(g.id);
+            }
+            g.tick = g.tick + 1;
         }
 }
 // scene
