--- a/bomi.html
+++ b/bomi.html
@@ -41,13 +41,23 @@ var g = {
         },
         "start": function() {
             console.log("dragon live!");
-            ren.data();
-            // ren.dragon();
+            // ren.data();
+            ren.dragon();
         }
 }
 // scene
 var sce = {
     "init": function() {
+        // bkgd
+        sce.b = {};
+        sce.b.r = [1920,1080,0,0];
+        sce.b.c = dom.canvas(sce.b.r);
+        dom.add(sce.b.c);
+        sce.b.d = rgba.rmon();
+        sce.b.c.can.dataset.x = "bkgd_0";
+        sce.b.c.can.addEventListener("click", sce.click, false);
+
+        // canvas
         sce.a = {};
         sce.a.r = [1024,1024,448,28];
         sce.a.c = dom.canvas(sce.a.r);
@@ -62,12 +72,20 @@ var sce = {
  }
  // render
  var ren = {
+     "clear": function() {
+         // bkgd
+        sce.b.c.con.fillStyle = rgba.mono(0);
+        sce.b.c.con.fillRect(0,0,sce.b.c.can.width,sce.b.c.can.height);
+         // canvas
+        sce.a.c.con.fillStyle = rgba.mono(0);
+        sce.a.c.con.fillRect(0,0,sce.a.c.can.width,sce.a.c.can.height);
+     },
      "data": function() {
         sce.a.c.con.fillStyle = sce.a.d;
         sce.a.c.con.fillRect(0,0,sce.a.c.can.width,sce.a.c.can.height);
      },
      "dragon": function() {
-
+        ren.clear();
      }
  }
     // dom
