--- a/bomi.html
+++ b/bomi.html
@@ -42,6 +42,7 @@ var g = {
         "start": function() {
             console.log("dragon live!");
             // ren.data();
+            bmp.dragon();
             ren.dragon();
         }
 }
@@ -86,6 +87,22 @@ var sce = {
      },
      "dragon": function() {
         ren.clear();
+        ren.bmp(bmp.b["dragon"], sce.a.c);
+     },
+     "bmp": function(b0, c0) {
+         // 32x32 pixel blocks
+         // in 1024 square canvas
+         c0.con.fillStyle = rgba.mono(255);
+         for (var i = 0; i < b0.length; i++) {
+             if (b0[i] == 1) {
+                 continue;
+             }
+             var x0 = i % 32;
+             var y0 = (i / 32) >>> 0;
+             var x1 = (x0 * 32) >>> 0;
+             var y1 = (y0 * 32) >>> 0;
+             sce.a.c.con.fillRect(x1,y1,32,32);
+         }
      }
  }
     // dom
