Simple function chaining for Mir tests

--- a/bomi.html
+++ b/bomi.html
@@ -197,6 +197,20 @@ var sce = {
          var t4 = mir.reverse(t0);
          console.log("reverse array");
          console.log(t4);
+     },
+     "chain": function() {
+         // render all visual tests
+         // one after the other at different time intervals
+         // start with a random bitmap and render
+         // then a horizontal invader
+         // then a vertical invader
+         // finally a shuffle
+
+         // we could use async / await
+         // or simply set graduated timeouts
+         // window.setTimeout(mir.test1, 2000);
+         // window.setTimeout(mir.test2, 4000);
+
      }
  }
  // render
