--- a/cuto.html
+++ b/cuto.html
@@ -83,6 +83,15 @@ var net = {
         // browser_rng:server_rng:timestamp
         net.c = (Math.random() * Number.MAX_SAFE_INTEGER) >>> 0;
         console.log("pid: " + net.c);
+
+        // send browser pid to server /a
+        // server generates pid for cache
+        // assign a name from Demigods list
+        // render browser side identity
+        // create local store
+        // live stats on okaq.com/<name>
+
+        
     }
 }
     // dom
