Added Rings bitmap data

--- a/cuto.html
+++ b/cuto.html
@@ -91,7 +91,7 @@ var net = {
         // create local store
         // live stats on okaq.com/<name>
 
-        
+
     }
 }
     // dom
@@ -265,6 +265,11 @@ var bmp = {
     }
     // dragon
     var dragon = "/////////////////////////////x////9P////Bf///wb///8/H///H4///h+H//4fx/v8H+f5/B///Pwf//44P///AD///8Af///+H////g////////////////////////////////////////////////////////////8=";
+    var rings = {
+"ring_0":"/////////////////////////////////////////////////4f///+H///+Af///gH///+H////h////gH///4B///+Af///gH///mef//5nn//+Z5///mef//5nn//+Z5///mef//5nn//+Z5///////////////////////8=",
+"ring_1":"/wAP//wAA//8AAP//AAw//wAMP/4AAD/+AAA//gAAP/4AAD/wADw/8AA8A/AAPAPwADwDwAA/g8AAP8PAA8PDwAPD88ADw/PAA8PzwAPCc8ADwnPwAMMz8ADDD/AAw8/wAMP//AA8P/wAPD/8ADw//AA8P////////////////8=",
+"ring_2":"////////////////////////////AAf//gAD//wAAP/4AAB/8D/4P+B//h/g//8P4f//D+H//w/h//8P4P/+D+D//A/wP/AP+AAAH/wAAD//AAB//4AA//////////////////////////////////////////////////////8=",
+}
     // string view
     /*\
     |*|
