--- a/cuto.html
+++ b/cuto.html
@@ -44,6 +44,11 @@ var g = {
             
             ren.clear();
             net.start();
+
+            bmp.dragon();
+            bmp.rings();
+
+            // scene canvas
         }
 }
 // scene
@@ -222,6 +227,17 @@ var bmp = {
             // decode all in one pass
             // or only as needed in game
             // if performance is issue on load
+        },
+        "rings": function() {
+            // decode rings
+            bmp.c = {};
+            for (var k0 in rings) {
+                var b0 = rings[k0];
+                var b1 = base64DecToArr(b0);
+                var b2  = bmp.exp(b1);
+                bmp.c[k0] = b2;
+            }
+            console.log(bmp.c);
         }
     }
     // gugi bitmap font
@@ -265,6 +281,7 @@ var bmp = {
     }
     // dragon
     var dragon = "/////////////////////////////x////9P////Bf///wb///8/H///H4///h+H//4fx/v8H+f5/B///Pwf//44P///AD///8Af///+H////g////////////////////////////////////////////////////////////8=";
+    // rings
     var rings = {
 "ring_0":"/////////////////////////////////////////////////4f///+H///+Af///gH///+H////h////gH///4B///+Af///gH///mef//5nn//+Z5///mef//5nn//+Z5///mef//5nn//+Z5///////////////////////8=",
 "ring_1":"/wAP//wAA//8AAP//AAw//wAMP/4AAD/+AAA//gAAP/4AAD/wADw/8AA8A/AAPAPwADwDwAA/g8AAP8PAA8PDwAPD88ADw/PAA8PzwAPCc8ADwnPwAMMz8ADDD/AAw8/wAMP//AA8P/wAPD/8ADw//AA8P////////////////8=",
