--- a/cuto.html
+++ b/cuto.html
@@ -59,6 +59,10 @@ var db = {
         // animation history
         // initial conditions
         db.a = {};
+        db.a.ring = ['a','b','c','d'];
+        db.a.maps = ['dragon','ring_0','ring_1','ring_2'];
+        db.a.buff = [0,1,2,3];
+        // shuffle buff
     }
 }
 // scene
